# v-sign

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_baseline.py  setup.py
configs/: VSL_V0.yaml  VSL_V1.yaml  VSL_V2.yaml  VSL_V3.yaml  baseline.yaml
plots/: dataset_samples_visualize.py  plots.py  video_dataset_analysis.py  visualize_gloss.py
src/vsign/data/: dataloader_video.py  extract_frames.py  extract_test_frames.py  print_processed_info.py  vsl_preprocess.py  vsl_preprocess_new.py
src/vsign/engine/: seq_scripts.py
src/vsign/evaluation/slr_eval/: python_wer_evaluation.py  wer_calculation.py
src/vsign/inference/: README.md  cache_manager.py  demo.py  handlers.py  inference_engine.py  llm_handler.py  model_loader.py  preprocessor.py  prompt.txt  ui_components.py
src/vsign/models/: slr_network.py
src/vsign/modules/: __init__.py  criterions.py  resnet.py
src/vsign/utils/: __init__.py  decode.py  device.py  optimizer.py  parameters.py  video_augmentation.py
