[project]
name = "v-sign"
version = "0.1.0"
description = "V-Sign: A sign language recognition and translation system based on Corrnet"
readme = "README.md"
requires-python = ">=3.8,<3.10"
dependencies = [
    # Core
    "numpy>=1.24",
    "pydantic>=2.10.6",

    # ML/AI
    "torch==2.1.2+cu121",
    "torchaudio==2.1.2+cu121",
    "torchvision==0.16.2.0+cu121",
    "litellm>=1.76.0",

    # Image Processing
    "opencv-python>=4.12.0.88",
    "pillow>=10.4.0",
    "spicy>=0.16.0",

    # Packaging
    "pip>=25.0.1",
    "setuptools>=75.3.2",
    "wheel>=0.45.1",

    # UI
    "gradio>=4.44.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true


